Fixing home page waist box placement, caption alignment, caption background alignment. Also the top level nav links are not clickable so lets get rid of the cursor icon that says they are.

--- a/wp-content/themes/makeblog/less/make/header.less
+++ b/wp-content/themes/makeblog/less/make/header.less
@@ -331,10 +331,9 @@ li.top-cat-item a:visited {
 
 }
 
-
 #menu-make-secondary-nav>li>a:first-child:hover{
    text-decoration:none !important;
-   cursor: pointer !important;
+   cursor: default !important;
 }
 
 .mega-nav-footer {
